--- a/contact/contact.html
+++ b/contact/contact.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="contact.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;700&display=swap" rel="stylesheet"> -->
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -42,13 +46,9 @@
                 <br>
                 <p>Watch is a desired fashion accessory and is essential; wardrobe piece for all individuals. Be it going out for a party or an office meeting, a stylish and elegant watch surely completes the look.</p>
                 <br>
-                <br>
                 <h2>Reddo Store</h2>
-                <br>
                 <p>Dis: 302 Nguyễn Văn Đậu, P11, Q.Bình Thạnh, TP.HCM</p>
-                <br>
                 <p>Hotline: 0363 28 11 97</p>
-                <br>
                 <p style="color: #4da7ca">Reddo@dgmail.com</p>
             </div>
         </div>
